# sweepstake

./: .gitattributes  .gitignore  AGENTS.md  README.md  Taskfile.yml  _check_dist.py  _check_syntax.py  architecture.md  cli.py  ideas.md  logo.txt  opencode.json  parse_opencode_session.py  play-off-plan.md  pyproject.toml  tmp_phase_output.txt  upgrade.py
.github/: CODEOWNERS
.github/workflows/: 01_deploy.yaml  01_update_content.yaml  02_deploy_page.yaml  03_deploy.yaml  test.yml
.opencode/agents/: black-belt.md
.opencode/skills/to-issues/: SKILL.md
issues/: play-off-plan_0001_corrigir-mapas-emoji-playoff.md  play-off-plan_0002_placar-penaltis-match-pages.md  play-off-plan_0003_bonus-times-match-pages.md  play-off-plan_0004-card-bonus-times-dashboard.md  play-off-plan_0005-badge-bonus-times-arena.md  play-off-plan_0006-pipeline-playoff-end-to-end.md
sessions/20260614_1828_ses_137f660fcffeUSgVvf2hJsROtD/: nova_visao_original_para_o_repositorio.md
sessions/20260616_2225_ses_12cd0d0b8ffe1ml13vhM4foHY5/: new_session_2026_06_17t012545415z.md
sessions/20260620_1338_ses_11a1a164fffegvoWoD34Dj64hL/: phase_2_readiness_with_new_excel_files.md
sessions/20260705_1431_ses_0ccaaa113ffeoSJuwZMBw0KnW3/: extrair_configuracoes_do_core_para_configyaml.md
src/a2025_club_world_cup/data/: jogos_1afase.csv  jogos_playoffs.csv
src/a2025_club_world_cup/data/bronze/1afase/: 1afase_Cesar Saraivax.csv  1afase_Gabãox.csv  1afase_Guilherme.csv  1afase_Lucas Ubertini.csv  1afase_Pedro Tayerx.csv  1afase_Rafael Contex.csv
src/a2025_club_world_cup/data/gold/1afase/: 1afase_all.csv  1afase_valido_all.csv
src/a2025_club_world_cup/data/raw/1afase/: Tabela Geral 2025 - Gabão.xlsx  Tabela Geral 2025 - Guilherme.xls  Tabela Geral 2025 - Leo Fernandes.xls  Tabela Geral 2025 - Pedro Tayer.xlsx
src/a2025_club_world_cup/data/silver/1afase/: 1afase_Andre Bonito.csv  1afase_André Tayer.csv  1afase_Cesar Saraivax.csv  1afase_Frederico Soter.csv  1afase_Gabãox.csv  1afase_Guilherme.csv  1afase_João Henrique.csv  1afase_Leigo Gianonnix.csv  1afase_Leo Fernandes.csv  1afase_Lucas Ubertini.csv  1afase_Marcelo.csv  1afase_Pedro Tayerx.csv  1afase_RODRIGO ALBERNAZ.csv  1afase_Rafael Contex.csv  1afase_Thales Oliveira.csv  1afase_thiago bahiensex.csv  all_games.csv
src/a2025_club_world_cup/docs/html/: index.html  overview.html
src/a2025_club_world_cup/docs/html/boleiros/: Andre Bonito.html  André Tayer.html  Cesar Saraivax.html  Frederico Soter.html  Gabãox.html  Guilherme.html  João Henrique.html  Leigo Gianonnix.html  Leo Fernandes.html  Lucas Ubertini.html  Marcelo.html  Pedro Tayerx.html  (+4 more)
src/a2025_club_world_cup/docs/md/: overview.md
src/a2025_club_world_cup/processing/: bronze_to_silver.py  load_excel.py  main.py  raw_to_bronze.py  silver_to_gold.py
src/a2025_club_world_cup/reports/: index.py  main.py  main_html.py  main_md.py
src/championships/: __init__.py
src/championships/2025_club_world_cup/: __init__.py  config.yaml
src/championships/2025_club_world_cup/data/: games.csv  jogos_1afase.csv
src/championships/2026_world_cup/: config.yaml  flag.html
src/championships/2026_world_cup/data/: games.csv
src/core/: config.py  datavault.py  get_results.py  loader.py  logo_fetcher.py  pipeline.py  printing.py  scoring.py
src/core/matches/: __init__.py  wc2026.py
src/core/reports/: arquetipos.py  dashboard.py  html.py  markdown.py  new_views.py  sorttable.js  utils.py
src/services/: printing.py
tests/: conftest.py
tests/core/: test_config.py  test_loader.py  test_pipeline.py  test_reports.py  test_scoring.py
(+1013 files in other folders)
